kos/kernel/security/security.h

typedef struct kos_capability_set kos_capability_set_t;
typedef struct kos_selinux_context kos_selinux_context_t;
typedef struct kos_seccomp_filter kos_seccomp_filter_t;
/* Core security functions */
int kos_security_init(void);
void kos_security_cleanup(void);
/* Capability system */
typedef enum {
    KOS_CAP_CHOWN = 0,
    KOS_CAP_DAC_OVERRIDE,
    KOS_CAP_DAC_READ_SEARCH,
    KOS_CAP_FOWNER,
    KOS_CAP_FSETID,
    KOS_CAP_KILL,
    KOS_CAP_SETGID,
    KOS_CAP_SETUID,
    KOS_CAP_SETPCAP,
    KOS_CAP_LINUX_IMMUTABLE,
    KOS_CAP_NET_BIND_SERVICE,
    KOS_CAP_NET_BROADCAST,
    KOS_CAP_NET_ADMIN,
    KOS_CAP_NET_RAW,
    KOS_CAP_IPC_LOCK,
    KOS_CAP_IPC_OWNER,
    KOS_CAP_SYS_MODULE,
    KOS_CAP_SYS_RAWIO,
    KOS_CAP_SYS_CHROOT,
    KOS_CAP_SYS_PTRACE,
    KOS_CAP_SYS_PACCT,
    KOS_CAP_SYS_ADMIN,
    KOS_CAP_SYS_BOOT,
    KOS_CAP_SYS_NICE,
    KOS_CAP_SYS_RESOURCE,
    KOS_CAP_SYS_TIME,
    KOS_CAP_SYS_TTY_CONFIG,
    KOS_CAP_MKNOD,
    KOS_CAP_LEASE,
    KOS_CAP_AUDIT_WRITE,
    KOS_CAP_AUDIT_CONTROL,
    KOS_CAP_SETFCAP,
    KOS_CAP_MAC_OVERRIDE,
    KOS_CAP_MAC_ADMIN,
    KOS_CAP_SYSLOG,
    KOS_CAP_WAKE_ALARM,
    KOS_CAP_BLOCK_SUSPEND,
    KOS_CAP_AUDIT_READ,
    KOS_CAP_PERFMON,
    KOS_CAP_BPF,
    KOS_CAP_CHECKPOINT_RESTORE,
    KOS_CAP_MAX
} kos_capability_t;
/* Capability functions */
int kos_cap_init(void);
int kos_cap_get(uint32_t pid, kos_capability_set_t* caps);
int kos_cap_set(uint32_t pid, const kos_capability_set_t* caps);
bool kos_cap_capable(uint32_t pid, kos_capability_t cap);
int kos_cap_drop(uint32_t pid, kos_capability_t cap);
int kos_cap_raise(uint32_t pid, kos_capability_t cap);
/* SELinux types */
typedef enum {
    KOS_SELINUX_UNCONFINED,
    KOS_SELINUX_CONFINED,
    KOS_SELINUX_ENFORCING,
    KOS_SELINUX_PERMISSIVE,
    KOS_SELINUX_DISABLED
} kos_selinux_mode_t;
/* SELinux functions */
int kos_selinux_init(void);
void kos_selinux_cleanup(void);
int kos_selinux_set_mode(kos_selinux_mode_t mode);
kos_selinux_mode_t kos_selinux_get_mode(void);
int kos_selinux_check_access(const kos_selinux_context_t* scontext,
                             const kos_selinux_context_t* tcontext,
                             const char* tclass, const char* perm);
/* Seccomp types */
typedef enum {
    KOS_SECCOMP_MODE_DISABLED = 0,
    KOS_SECCOMP_MODE_STRICT,
    KOS_SECCOMP_MODE_FILTER
} kos_seccomp_mode_t;
/* Seccomp functions */
int kos_seccomp_init(void);
int kos_seccomp_set_mode(uint32_t pid, kos_seccomp_mode_t mode);
kos_seccomp_mode_t kos_seccomp_get_mode(uint32_t pid);
int kos_seccomp_add_filter(uint32_t pid, const kos_seccomp_filter_t* filter);
/* Audit types */
typedef enum {
    KOS_AUDIT_SYSCALL = 1,
    KOS_AUDIT_FS_WATCH,
    KOS_AUDIT_PATH,
    KOS_AUDIT_IPC,
    KOS_AUDIT_SOCKETCALL,
    KOS_AUDIT_CONFIG_CHANGE,
    KOS_AUDIT_SOCKADDR,
    KOS_AUDIT_CWD,
    KOS_AUDIT_EXECVE,
    KOS_AUDIT_USER,
    KOS_AUDIT_LOGIN,
    KOS_AUDIT_SELINUX_ERR,
    KOS_AUDIT_AVC
} kos_audit_type_t;
/* Audit functions */
int kos_audit_init(void);
void kos_audit_cleanup(void);
int kos_audit_log_event(kos_audit_type_t type, uint32_t pid,
                        const char* message);
int kos_audit_set_enabled(bool enabled);
bool kos_audit_is_enabled(void);
/* Cryptographic functions */
typedef enum {
    KOS_HASH_SHA256,
    KOS_HASH_SHA512,
    KOS_HASH_MD5
} kos_hash_type_t;
/* Crypto functions */
int kos_crypto_init(void);
void kos_crypto_cleanup(void);
int kos_crypto_hash(kos_hash_type_t type, const void* data, size_t len,
                    void* hash, size_t hash_len);
int kos_crypto_random(void* buffer, size_t len);